--- a/package.json
+++ b/package.json
@@ -11,19 +11,24 @@
   "dependencies": {
     "@hookform/resolvers": "^3.4.2",
     "@react-input/mask": "^1.2.4",
+    "@tanstack/react-query": "^5.40.0",
+    "@tanstack/react-query-devtools": "^5.0.0-alpha.91",
     "axios": "^1.7.2",
     "framer-motion": "^11.2.6",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.379.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.5",
+    "react-loader-spinner": "^6.1.6",
     "react-toastify": "^10.0.5",
     "swiper": "^11.1.3",
     "tailwind-merge": "^2.3.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
